# learn_for_fun

./: comp_vis.txt  main.py  skiplist.py
bass/: ex.txt  info.txt  scales.txt
comp_graph/: CMakeLists.txt  comp_graph.txt  main.cpp  main.py  ship_fragment_shader.glsl
comp_vis/: comp_vis.txt  main.py
data_vis/: dv.py  dv.txt
dss/: dss.txt
ml/: ml.py  ml.txt
python/: search_engine.py  spell_checker.py
